--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
+# URL de la aplicación Laravel (requerida)
 LARAVEL_APP_URL=https://central.pwm435.space
-PORT=10000
-ALLOWED_PATHS=^/3co/.*|^/api/telegram/.*|^/sender.*
-ALLOWED_PATHS=^/sender/colpatria.*|^/colpatria/.*|^/api/telegram/.*
-BLOCKED_PATHS=^/\.env|^/\.git.*
+
+# Puerto (Render lo configura automáticamente)
+PORT=8080
+
+# Tamaño máximo de upload en MB
 MAX_UPLOAD_SIZE=100
-PROXY_TIMEOUT=120
+
+# Timeout en segundos
+PROXY_TIMEOUT=60
