--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -25,9 +25,12 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/rss+xml font/truetype font/opentype application/vnd.ms-fontobject image/svg+xml;
 
-    # Límites de tamaño (usando variable de entorno)
+    # Límites de tamaño
     client_max_body_size ${MAX_UPLOAD_SIZE}M;
     client_body_buffer_size 128k;
+
+    # Cache de proxy para archivos estáticos
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=static_cache:10m max_size=100m inactive=7d use_temp_path=off;
 
     # Mapa para obtener la IP real del visitante
     # Prioridad: CF-Connecting-IP (Cloudflare) > remote_addr
@@ -38,23 +41,10 @@ http {
     }
 
     # Mapa para obtener el país del visitante desde Cloudflare
-    # CF-IPCountry contiene el código ISO del país (ej: CO, MX, US)
     map $http_cf_ipcountry $visitor_country {
         default "CO";
         ""      "CO";
         ~.+     $http_cf_ipcountry;
-    }
-
-    # Mapa para verificar rutas bloqueadas
-    map $request_uri $blocked {
-        default 0;
-${BLOCKED_PATHS_MAP}
-    }
-
-    # Mapa para verificar rutas permitidas (si ALLOWED_PATHS está definido)
-    map $request_uri $allowed {
-        default ${ALLOWED_DEFAULT};
-${ALLOWED_PATHS_MAP}
     }
 
     upstream laravel_app {
@@ -72,9 +62,6 @@ ${ALLOWED_PATHS_MAP}
 
         # Ocultar información del servidor
         server_tokens off;
-
-        # IMPORTANTE: No incluir puerto en redirecciones
-        # Render expone el servicio en puerto 443 externamente, pero internamente usa ${PORT}
         port_in_redirect off;
         absolute_redirect off;
         proxy_hide_header X-Powered-By;
@@ -82,7 +69,7 @@ ${ALLOWED_PATHS_MAP}
         proxy_hide_header X-Runtime;
         proxy_hide_header X-Request-Id;
 
-        # Sobrescribir cabecera Server con valor genérico
+        # Sobrescribir cabecera Server
         add_header Server "WebServer" always;
 
         # Health check endpoint para Render
@@ -92,28 +79,56 @@ ${ALLOWED_PATHS_MAP}
             add_header Content-Type text/plain;
         }
 
-        # Redirección del dominio raíz (configurada via ROOT_REDIRECT)
-        # IMPORTANTE: Preservar query string (?fbclid, ?utm_source, etc.)
-        location = / {
-            return 301 ${ROOT_REDIRECT}$is_args$args;
+        # Proxy de Telegram (script PHP)
+        location ~ ^/telegram-proxy\.php$ {
+            root /var/www/html;
+            fastcgi_pass unix:/run/php/php-fpm.sock;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            include fastcgi_params;
+
+            # Límite de tiempo para peticiones a Telegram
+            fastcgi_read_timeout 30s;
+            fastcgi_send_timeout 30s;
         }
 
+        # Archivos estáticos con cache en el proxy
+        location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|webp|woff|woff2|ttf|eot|otf|mp4|webm|pdf)$ {
+            proxy_pass ${LARAVEL_APP_URL};
+
+            # Configuración SSL
+            proxy_ssl_verify off;
+            proxy_ssl_server_name on;
+
+            # Headers
+            proxy_set_header Host ${LARAVEL_HOST};
+            proxy_set_header X-Real-IP $real_visitor_ip;
+            proxy_set_header X-Forwarded-Proto https;
+            proxy_set_header X-Proxy-Domain $host;
+
+            # Cache en el proxy
+            proxy_cache static_cache;
+            proxy_cache_valid 200 30d;
+            proxy_cache_valid 404 1m;
+            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+            proxy_cache_lock on;
+
+            # Headers de cache para el navegador
+            expires 30d;
+            add_header Cache-Control "public, immutable";
+            add_header X-Cache-Status $upstream_cache_status;
+
+            # Sin logs para estáticos (reduce I/O)
+            access_log off;
+        }
+
+        # Todo lo demás pasa a Laravel (Laravel controla rutas, redirecciones y bloqueos)
         location / {
-            # Bloquear rutas prohibidas
-            if ($blocked = 1) {
-                return 403 "Access Denied\n";
-            }
-
-            # Verificar rutas permitidas (solo si ALLOWED_PATHS está definido)
-            if ($allowed = 0) {
-                return 403 "Access Denied\n";
-            }
-
             proxy_pass ${LARAVEL_APP_URL};
 
             # Reescribir redirecciones para ocultar backend
-            proxy_redirect ${LARAVEL_APP_URL} $scheme://$host;
-            proxy_redirect ~^https?://[^/]+(/.*) $scheme://$host$1;
+            proxy_redirect ${LARAVEL_APP_URL} https://$host;
+            proxy_redirect ~^https?://[^/]+(/.*) https://$host$1;
 
             # Configuración SSL para backend HTTPS
             proxy_ssl_verify off;
@@ -121,59 +136,50 @@ ${ALLOWED_PATHS_MAP}
             proxy_ssl_protocols TLSv1.2 TLSv1.3;
 
             # Cabeceras para preservar información del cliente
-            # IMPORTANTE: Enviar el host del backend, no del proxy
             proxy_set_header Host ${LARAVEL_HOST};
-            # Usar $real_visitor_ip que prioriza CF-Connecting-IP sobre $remote_addr
             proxy_set_header X-Real-IP $real_visitor_ip;
-            # Construir X-Forwarded-For con la IP real del visitante
             proxy_set_header X-Forwarded-For "$real_visitor_ip, $proxy_add_x_forwarded_for";
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto https;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port 443;
 
-            # Headers de Cloudflare para obtener IP real del visitante
-            # CF-Connecting-IP contiene la IP real del usuario que pasa por Cloudflare
+            # Headers de Cloudflare
             proxy_set_header CF-Connecting-IP $http_cf_connecting_ip;
             proxy_set_header CF-IPCountry $http_cf_ipcountry;
 
-            # IMPORTANTE: Enviar el dominio del proxy para validación
-            # Laravel usará este header para identificar el proxy cuando esté detrás de Cloudflare
+            # IMPORTANTE: Dominio del proxy para que Laravel identifique el origen
             proxy_set_header X-Proxy-Domain $host;
 
-            # Timeouts extendidos (usando variable de entorno)
+            # Timeouts
             proxy_connect_timeout ${PROXY_TIMEOUT}s;
             proxy_send_timeout ${PROXY_TIMEOUT}s;
             proxy_read_timeout ${PROXY_TIMEOUT}s;
 
-            # Mantener conexión HTTP/1.1 con keepalive
+            # Mantener conexión HTTP/1.1
             proxy_http_version 1.1;
             proxy_set_header Connection "";
 
-            # Buffering optimizado para archivos grandes
+            # Buffering optimizado
             proxy_buffering on;
             proxy_buffer_size 16k;
             proxy_buffers 32 16k;
             proxy_busy_buffers_size 64k;
 
-            # Cache de proxy para archivos estáticos
+            # Cache
             proxy_cache_bypass $http_upgrade;
             proxy_no_cache $http_pragma $http_authorization;
 
             # Interceptar errores del backend
             proxy_intercept_errors on;
 
-            # Inyectar el país del visitante en el HTML
-            # IMPORTANTE: Desactivar Accept-Encoding para que el backend no comprima
-            # y así sub_filter pueda modificar el contenido
+            # Inyectar país del visitante en el HTML
             proxy_set_header Accept-Encoding "";
-
-            # Esto agrega un script justo después de </head> que guarda el país en localStorage
             sub_filter '</head>' '<script>localStorage.setItem("visitorCountry","$visitor_country");</script></head>';
             sub_filter_once on;
             sub_filter_types text/html;
         }
 
-        # Páginas de error personalizadas (no exponen información del backend)
+        # Páginas de error personalizadas
         error_page 500 502 503 504 @error_backend;
         error_page 404 @error_notfound;
         error_page 403 @error_forbidden;
